Fix z-index to hide toolbar button when a modal is open

--- a/FormPortal/Pages/Admin/Forms/FormEditor.razor.css
+++ b/FormPortal/Pages/Admin/Forms/FormEditor.razor.css
@@ -312,7 +312,7 @@
         position: fixed;
         bottom: .75rem;
         right: .75rem;
-        z-index: 2000;
+        z-index: 100;
     }
 
         .toolbar-toggle .btn-toolbar {
